<resources>
    <string name="app_name">Activity Tracker</string>
    <string name="text_enter">Войти</string>
    <string name="text_login">Логин</string>
    <string name="text_signup">Регистрация</string>
    <string name="text_password">Пароль</string>
    <string name="text_repeat_password">Повторите пароль</string>
    <string name="text_name_or_nickname">Имя или никнейм</string>
    <string name="text_gender">Пол</string>
    <string name="text_continue">Продолжить</string>
    <string name="slogan">Пожалуй лучший\n фитнес трекер в ДВФУ</string>
    <string name="created">Созданный студентами  2-ого курса</string>
    <string name="text_signup2">Зарегистрироваться</string>
    <string name="text_already_exist">Уже есть аккаунт?</string>
    <string name="description_wave">wave</string>
    <string name="description_welcome_logo">welcome_logo</string>
    <string name="description_logo_text">logo_text</string>
    <string name="description_login">login</string>
    <string name="menu_activity_tracker">Активность</string>
    <string name="menu_profile">Профиль</string>
    <string name="description_fab">fab</string>
    <string name="text_distance">Distance</string>
    <string name="text_date">Date</string>
    <string name="text_duration">Duration</string>
    <string name="text_start">Старт</string>
    <string name="text_time">time</string>
    <string name="vertical_separator_line">|</string>
    <string name="text_finish">Финиш</string>
    <string name="text_comment">Комментарий</string>
    <string name="text_activity_type">Activity type</string>
    <string name="text_user">User</string>
    <string name="text_profile_fragment">Profile Fragment</string>
    <string name="description_back_button">back_button</string>
    <string name="text_start2">Начать</string>
    <string name="text_pognali">Погнали? :)</string>
    <string name="text_new_password">Новый пароль</string>
    <string name="text_old_password">Старый пароль</string>
    <string name="text_change_password">Изменить пароль</string>
    <string name="text_accept">Принять</string>
    <string name="text_bicycle">Велосипед</string>
    <string name="description_bike">bike</string>
    <string name="text_leave">Выйти</string>
    <string name="text_save">Сохранить</string>
    <string name="text_profile">Профиль</string>
    <string name="text_activity">Activity</string>
    <string name="description_finish_button">finish_button</string>
    <string name="description_pause_button">pause_button</string>
    <string name="text_menu_men">Мужской</string>
    <string name="text_menu_women">Женский</string>
</resources>